<resources>
	<string name="app_name" translatable="false">Girl-Talk-Girl</string>
	<string name="button_ok">OK</string>
	<string name="button_save">Save</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_delete">Delete</string>
	<string name="button_continue">Continue</string>
	<string name="button_reset">Reset</string>
	<string name="current_value_as_sentence">Current: %1$s.</string>
	<string name="frame_image_description">The image for this frame</string>
	<string name="frame_image_action_description">A visual representation of the current action with this frame</string>
	<string name="zero_length_audio" translatable="false">0:00.0</string>
	<string name="seconds">seconds</string>
	<string name="background_task_progress">Please wait…</string>
	<string name="import_starting">Starting to process imported files…</string>
	<string name="import_file_confirmation">Import file</string>
	<string name="import_file_hint">Would you like to import the narrative %1$s?</string>
	<string name="import_not_now">Not now</string>
	<string name="import_file">Import</string>
	<string name="import_progress">Processing new narrative files…</string>
	<string name="import_finished">Successfully imported new narrative files</string>
	<string name="video_export_format_incompatible_title">Warning</string>
	<string name="video_export_format_incompatible_summary">This narrative contains audio that is incompatible with video files (currently M4A, MP3 and WAV are supported). This audio will not be included in the video. Continue exporting?</string>
	<string name="video_export_task_progress">Creating video file – this may take some time…</string>
	<string name="video_export_run_in_background">Run in background</string>
	<string name="video_export_task_complete">Video creation completed</string>
	<string name="video_export_task_complete_notification">Tap to save or share your video</string>
	<string name="video_export_task_complete_hint">%1$s – tap the notification to save or share your video</string>
	<string name="error_loading_narrative_player">Error: couldn\'t open the narrative – please try again</string>
	<string name="export_narrative_title">Export this narrative</string>
	<string name="export_icon_one_way" translatable="false">&#x2191;&#160;&#160;&#160;&#160;%1$s</string>
	<string name="export_icon_two_way" translatable="false">&#x2191;&#x2193;&#160;&#160;%1$s</string>
	<string name="export_video">Video (share, upload, YouTube)</string>
	<string name="export_html">HTML (create a webpage)</string>
	<string name="export_smil">SMIL (send to %1$ss)</string>
	<string name="export_narrative_failed">Error: failed to export the narrative – please try again</string>
	<string name="export_missing_directory">Error: unable to find a temporary directory – please ensure your device or SD card has free space available</string>
	<string name="export_potential_problem">Warning: No external storage found – on some devices this can cause export issues, and you may encounter problems playing the narrative</string>
	<string name="export_creation_failed">Error: couldn\'t create the files to export – please try again</string>
	<string name="export_narrative_name">Please enter a name</string>
	<string name="export_narrative_name_exists">Error: a file with that name already exists – please choose a different name</string>
	<string name="export_narrative_name_blank">Error: please enter a name</string>
	<string name="export_narrative_saved">The narrative has been saved to your device in the %1$s folder</string>
	<string name="select_template_hint">Select a template to load, or long-press for additional options</string>
	<string name="template_to_narrative_complete">The template has been loaded</string>
	<string name="delete_template_confirmation">Delete this template?</string>
	<string name="delete_template_hint">The template will be permanently deleted</string>
	<string name="delete_template_succeeded">The template has been deleted</string>
	<string name="template_actions">Template actions</string>
	<string name="export_template">Export this template</string>
	<string name="delete_template">Delete this template</string>
	<string name="export_template_failed">Error: failed to export the template – please try again</string>
	<string name="template_list_empty">No templates found\n\n\nTo make an existing narrative into a template, choose \"Make template\" from the frame editor\'s options menu</string>
	<string name="error_loading_text_editor">Error loading text editor – please try again</string>
	<string name="delete_text_confirmation">Delete this text?</string>
	<string name="delete_text_hint">All the text on this frame will be permanently deleted</string>
	<string name="delete_text_succeeded">The text has been deleted</string>
	<string name="split_text_add_content">Please add text before creating a new frame</string>
	<string name="span_text_add_content">Please add text before spanning to other frames</string>
	<string name="span_text_multiple_frames">This text will now show on all frames after this one, up to the next frame with text</string>
	<string name="span_text_single_frame">This text will now show on this frame only</string>
	<string name="error_loading_image_editor">Error loading image editor – please try again</string>
	<string name="error_camera_failed">Error: there was a problem communicating with the camera – please try again</string>
	<string name="error_taking_picture_no_camera">Unable to take pictures (no camera detected) – opening gallery instead</string>
	<string name="retake_picture_hint">Tap the picture to re-take or import from your gallery</string>
	<string name="retake_picture_hint_no_camera">Tap the picture to replace from your gallery</string>
	<string name="focus_camera_hint">Tap the screen to focus the camera</string>
	<string name="camera_image_description">The image taken with the camera</string>
	<string name="save_picture_failed">Error: failed to save the picture – please try again</string>
	<string name="import_picture_failed">Error: failed to import the picture – please try again</string>
	<string name="import_picture_unavailable">Sorry, unable to import pictures on this device – no gallery found</string>
	<string name="delete_image_confirmation">Delete this image?</string>
	<string name="delete_image_hint">The image will be permanently deleted</string>
	<string name="delete_image_succeeded">The image has been deleted</string>
	<string name="split_image_add_content">Please add an image before creating a new frame</string>
	<string name="span_image_add_content">Please add an image before spanning to other frames</string>
	<string name="span_image_multiple_frames">This image will now show on all frames after this one, up to the next frame with an image</string>
	<string name="span_image_single_frame">This image will now show on this frame only</string>
	<string name="error_loading_audio_editor">Error loading sound editor – please try again</string>
	<string name="error_playing_audio">Error playing the sound – please try again</string>
	<string name="error_recording_audio">Error recording the sound – please try again</string>
	<string name="error_recording_audio_no_microphone">Unable to start recording (no microphone detected) – opening music library instead</string>
	<string name="retake_audio_hint_no_recording">Tap the player to replace from your music library</string>
	<string name="retake_audio_hint">Tap the player to add to the audio or import from your music library</string>
	<string name="audio_playback_icon_description">Audio playback icon</string>
	<string name="import_audio_failed">Error: failed to import the audio – please try again</string>
	<string name="import_audio_unavailable">Sorry, unable to import audio on this device – no music library found</string>
	<string name="delete_audio_confirmation">Delete this sound?</string>
	<string name="delete_audio_hint">The sound will be permanently deleted</string>
	<string name="delete_audio_succeeded">The sound has been deleted</string>
	<string name="split_audio_add_content">Please record audio before creating a new frame</string>
	<string name="retake_audio_forbidden">Sorry, this audio is in a format that cannot be edited. To replace it, please delete the current recording first</string>
	<string name="span_audio_add_content">Please record audio before spanning to other frames</string>
	<string name="span_audio_multiple_frames">This audio will now play over all frames after this one, up to the next frame with audio</string>
	<string name="span_audio_single_frame">This audio will now play on this frame only</string>
	<string name="error_loading_frame_editor">Error loading frame editor – please try again</string>
	<string name="delete_frame_confirmation">Delete this frame?</string>
	<string name="delete_frame_hint">All the content in this frame will be permanently deleted</string>
	<string name="play_narrative_add_content">Please add media before starting playback</string>
	<string name="split_frame_add_content">Please add media before creating a new frame</string>
	<string name="make_template_hint">This narrative will now show in the list of templates when creating a new narrative</string>
	<string name="make_template_confirmation">Template complete</string>
	<string name="make_template_add_content">Please add media to this frame before creating a template</string>
	<string name="next_previous_no_more_frames">Swipe: there are no more frames in this narrative</string>
	<string name="delete_narrative_confirmation">Delete narrative?</string>
	<string name="delete_narrative_hint">The narrative this frame belongs to will be permanently deleted</string>
	<string name="delete_narrative_second_confirmation">Please confirm</string>
	<string name="span_media_edit_image_title">Edit image</string>
	<string name="menu_scan_imports">Scan and import</string>
	<string name="menu_resources_english" translatable="false">Resources (English)</string>
	<string name="menu_resources_russian" translatable="false">Resources (Pусский)</string>
	<string name="resources_title_1_english" translatable="false">Girl-talk-Girl Project</string>
	<string name="resources_title_2_english" translatable="false">GBV Links</string>
	<string name="resources_title_3_english" translatable="false">GBV Facts Worldwide</string>
	<string name="resources_title_4_english" translatable="false">GBV Glossaries</string>
	<string name="resources_title_5_english" translatable="false">GBV Story Ideas</string>
	<string name="resources_title_6_english" translatable="false">Story Making Links</string>
	<string name="resources_title_7_english" translatable="false">Safe Routes</string>
	<string name="resources_title_1_russian" translatable="false">Проект Girl-talk-Girl</string>
	<string name="resources_title_2_russian" translatable="false">Ресурсы по ГН</string>
	<string name="resources_title_3_russian" translatable="false">Глоссарий</string>
	<string name="resources_title_4_russian" translatable="false">Идеи для историй о ГН</string>
	<string name="resources_title_5_russian" translatable="false">Линки для создания истории</string>
	<string name="resources_title_6_russian" translatable="false">Безопасные маршруты</string>
	<string name="audio_library_subway">Subway</string>
	<string name="audio_library_ambulance">Ambulance</string>
	<string name="audio_library_footsteps">Footsteps</string>
	<string name="audio_library_sunny_day">Sunny day</string>
	<string name="audio_library_door_knock">Door knock</string>
	<string name="audio_library_door_close">Door closing</string>
	<string name="audio_library_crowd_talking">Crowd talking</string>
	<string name="audio_library_car_honk">Car honk</string>
	<string name="audio_library_glass_breaking">Glass breaking</string>
	<string name="audio_library_woman_laughing_1">Woman laughing (1)</string>
	<string name="audio_library_woman_laughing_2">Woman laughing (2)</string>
</resources>